--- a/daywey_custom_module/views/vendor_filter_view.xml
+++ b/daywey_custom_module/views/vendor_filter_view.xml
@@ -4,9 +4,22 @@
         <record id="vendor_filter_product_view" model="ir.ui.view">
             <field name="name">vendor.filter.product.view</field>
             <field name="model">purchase.order</field>
+            <field name="inherit_id" ref="purchase.purchase_order_form"/>
             <field name="arch" type="xml">
-
+                <xpath expr="//field[@name='order_line']//field[@name='product_id']" position="after">
+                    <field name="partner" invisible="1"/>
+                </xpath>
             </field>
         </record>
+<!--        <record id="vendor_filter_product_type" model="ir.ui.view">-->
+<!--            <field name="name">vendor.filter.product.type</field>-->
+<!--            <field name="model">purchase.order</field>-->
+<!--            <field name="inherit_id" ref="purchase.purchase_order_form"/>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <xpath expr="//field[@name='order_line']//field[@name='product_id']" position="attributes">-->
+<!--                    <attribute name="domain">[('seller_ids.name.name','=','partner')]</attribute>-->
+<!--                </xpath>-->
+<!--            </field>-->
+<!--        </record>-->
     </data>
 </odoo>
